# attacks

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml  requirements.txt
src/attacking/: README.md  eval_speakers.sh  eval_speech.sh  eval_words.sh  requirements.txt
src/attacking/attacks/: acrcloud_attack.py  sonnleitner_attack.py  zapr_attack.py
src/attacking/common/: config.py  metrics.py  utils.py
src/attacking/evaluation/: evaluate_speaker_recognition.py  evaluate_speech_vs_music.py  evaluate_words_attack.py  evaluation_speaker_worker.py
src/attacking/features/: acrcloud_features.py  sonnleitner_features.py  zapr_features.py
src/attacking/labelencoders/: create_speakers_labelencoder.py  create_words_labelencoder.py  librispeech_dev_speaker_labelencoder.joblib  librispeech_train_100_speaker_40speakers_labelencoder.joblib  librispeech_train_100_speaker_40speakers_test_labelencoder.joblib  words_labelencoder.joblib
src/data/: cli.py  util.py
src/features/: acrcloud.py  sonnleitner.py  zapr1.py  zapr2.py
src/fingerprinting/: make_fingerprints.py
src/fingerprinting/acrcloud/: batch_fingerprint_deezer.py  frida_deezer_injection.js
src/fingerprinting/audio/: utils.py
src/fingerprinting/audio/io/: audioReader.py
src/fingerprinting/common/: Peak.py  __init__.py  utils.py
src/fingerprinting/sonnleitner/: Sonnleitner.py  sonnleitner_batch_fingerprinter.py
src/fingerprinting/zapr/: batch_fingerprint_zapr.py  frida_zapr_injection.js
src/modeling/: cli.py  train_speaker_model.py  train_speech_model.py  train_words_model.py  transformer.py
