[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "acr-transformer-attack"
version = "0.1.0"
requires-python = "~=3.10.0"

authors = [
	{ name = 'Cosima Körfer' },
	{ name = 'Daniel Arp' },
	{ name = 'Robert Michael' },
]

dependencies = [
	'click',
	'pandas',
	'tqdm',
	'keras-nlp~=0.12.0',
	'scikit-learn',
	'tensorflow-addons~=0.21.0',
	'requests',
	'numpy~=1.26.0',
]


[project.optional-dependencies]
dev = [
	"ipython",
	"pylsp-rope",
	"python-lsp-ruff",
	"python-lsp-server[all]",
	"ruff",
]
cpu = ['tensorflow-cpu~=2.11.0']
gpu = [ # tensorflow for CUDA 11.7 @ gpux2
	'tensorflow~=2.11.0',
]

[project.scripts]
data = "data.cli:cli"
modeling = "modeling.cli:cli"

[tool.ruff]
line-length = 79
fix = true

[tool.ruff.format]
docstring-code-format = true
